test/compilable/extra-files/libpath.d
import foolib;
void main() { foolibfunc(); }
