test/fail_compilation/ice18803a.d
void main() { import ice18803b; }
